--- a/src/app/components/candidate/candidate.component.scss
+++ b/src/app/components/candidate/candidate.component.scss
@@ -16,6 +16,34 @@
   &.senior {
     background-color: #f74131;
   }
+
+  .label {
+    border: 1px solid black;
+    padding: 5px 10px;
+    border-radius: 20px;
+    background-color: white;
+    &.junior {
+      color: #8cc0f7;
+    }
+    &.midlevel {
+      color: black;
+    }
+    &.senior {
+      color: #f74131;
+    }
+  }
+
+  .skills {
+    display: flex;
+    flex-direction: column;
+    &__name {
+      display: flex;
+      flex-direction: row;
+    }
+    &__more {
+      cursor: pointer;
+    }
+  }
 }
 
 .animate:hover {
