resolve exercises structural directives

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
     />
   </div>
   <button (click)="list.toggleDirection()">Cambiar lista</button>
+  <button (click)="doSortByExperience()">Ordernar por experiencia</button>
+  <button (click)="doSortByName()">Ordernar por nombre</button>
   <div>
     <h3>
       Número de candidatos <span>{{ candidatesLength }}</span>
