directive test works

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,7 @@
     >
       <span>{{ i }}</span>
       <app-candidate
+        appHighlight
         [candidate]="candidate"
         (select)="selectCandidate($event)"
       ></app-candidate>
