--- a/src/app/components/candidate/candidate.component.html
+++ b/src/app/components/candidate/candidate.component.html
@@ -1,6 +1,6 @@
 <div [ngClass]="cssClasses" [style.color]="colorStyle">
-  <h2>{{ name }}</h2>
-  <h3>{{ surname }}</h3>
+  <h2>{{ name | capitalize }}</h2>
+  <h3>{{ surname | capitalize }}</h3>
   <p><strong>Age:</strong>{{ candidate.age }}</p>
   <p><strong>Position:</strong>{{ candidate.position }}</p>
   <p><strong>Experience:</strong>{{ candidate.experience }}</p>
@@ -20,7 +20,7 @@
     </div>
     <div *ngSwitchCase="'senior'"><span class="label senior">SENIOR</span></div>
   </ng-container>
-  <p><strong>Skills:</strong> {{ candidate.skills.join(", ") }}</p>
+  <p><strong>Skills:</strong> {{ candidate.skills.join(", ") | uppercase }}</p>
   <div class="skills">
     <h3>Skills</h3>
     <div
@@ -44,6 +44,12 @@
         </div>
       </ng-template>
     </ng-template>
+    <p>
+      <strong
+        >Salario mínimo:
+        {{ candidate.salary | currency : "EUR" : "€" : "1.0-0" : "es" }}</strong
+      >
+    </p>
   </div>
   <p><button data-testid="candidate-edit" (click)="doEdit()">Edit</button></p>
 </div>
